more edits in read me file

--- a/README.html
+++ b/README.html
@@ -170,11 +170,12 @@ pre code {
 <h1>Repository guide</h1>
 <p>Within this repository you will find the code materials for the commentary:</p>
 <p>Nunez Y, Gibson AE, Gennings C, Tanner EM, Goldsmith JA, Coull AB, and Kioumourtzoglou M-A. <a href="https://academic.oup.com/ije/article/50/2/685/6072574"><strong>Reflection on modern methods: good practices for applied statistical learning in epidemiology</strong></a></p>
+<p>This repository is complementary to <a href="https://github.com/lizzyagibson/SHARP.Mixtures.Workshop" class="uri">https://github.com/lizzyagibson/SHARP.Mixtures.Workshop</a></p>
 <p>The repository is organized into six folders. Four folders contained the coding materials for the four different methods discussed in the commentary: WQS, BKMR, lasso (lasso_glmnet), group lasso (grlasso_grpreg). All the materials for each respective method are within its folder. Within each method folder you will find an .Rmd file, or in the case of BKMR an r script, which contains the main code. For group lasso, you will find two .Rmd one contains the code for the cross validation over 100 different seeds and one the code for obtaining the variable coefficients over 100 different seeds. In the case of lasso, WQS, and BKMR all the code is in a single .Rmd.</p>
 <p>In addition to the methods folders you will find two other folders:</p>
 <ol style="list-style-type: decimal">
 <li>Data: contains the data and the data dictionary.</li>
-<li>Figures: contains the figures include in Nunez Y, et al paper.</li>
+<li>Figures: contains the figures included in Nunez Y, et al paper.</li>
 </ol>
 <p><strong>WARNING: This repo was created under R version 3.6.2.</strong></p>
 </div>
